--- a/Soloveyko_AV/Client/MainWindow.xaml
+++ b/Soloveyko_AV/Client/MainWindow.xaml
@@ -1,10 +1,21 @@
-﻿<Window x:Class="Client.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:DataAccessService="clr-namespace:Client.DataAccessService" x:Class="Client.MainWindow"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <DataGrid x:Name="DataGrid_1" HorizontalAlignment="Left" VerticalAlignment="Top" Height="175" Width="271" Margin="10,10,0,0" SelectionChanged="DataGrid_SelectionChanged"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="402,185,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <TabControl HorizontalAlignment="Left" Height="300" Margin="10,10,0,0" VerticalAlignment="Top" Width="387">
+            <TabItem Header="Users">
+                <DataGrid Name="DataGrid_Users" Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="ObjOfTransact">
+                <DataGrid Name="DataGrid_ObjOfTransact" Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Deals">
+                <DataGrid Name="DataGrid_Deals" Background="#FFE5E5E5"/>
+            </TabItem>
+        </TabControl>
 
     </Grid>
 </Window>
