--- a/Soloveyko_AV/Client/MainWindow.xaml
+++ b/Soloveyko_AV/Client/MainWindow.xaml
@@ -4,9 +4,9 @@
         xmlns:DataAccessService="clr-namespace:Client.DataAccessService" x:Class="Client.MainWindow"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="402,185,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <TabControl HorizontalAlignment="Left" Height="300" Margin="10,10,0,0" VerticalAlignment="Top" Width="387">
-            <TabItem Header="Users">
+        <Button Content="LoadInfo" HorizontalAlignment="Left" Margin="402,288,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <TabControl Name="TabControl_DataView" HorizontalAlignment="Left" Height="300" Margin="10,10,0,0" VerticalAlignment="Top" Width="387">
+            <TabItem Name="TabItem_Users" Header="Users">
                 <DataGrid Name="DataGrid_Users" Background="#FFE5E5E5" AutoGenerateColumns="False">
                     <DataGrid.DataContext>
                         <DataAccessService:ViewUser/>
@@ -20,8 +20,8 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </TabItem>
-            <TabItem Header="ObjOfTransact">
-                <DataGrid Name="DataGrid_ObjOfTransact" Background="#FFE5E5E5" AutoGenerateColumns="False">
+            <TabItem Name="TabItem_ObjOfTransact" Header="ObjOfTransact">
+                <DataGrid Name="DataGrid_ObjOfTransact" Background="#FFE5E5E5" AutoGenerateColumns="False" >
                     <DataGrid.DataContext>
                         <DataAccessService:ViewObjOfTransact/>
                     </DataGrid.DataContext>
@@ -40,8 +40,8 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </TabItem>
-            <TabItem Header="Deals">
-                <DataGrid Name="DataGrid_Deals" Background="#FFE5E5E5" AutoGenerateColumns="False">
+            <TabItem Name="TabItem_Deals" Header="Deals">
+                <DataGrid Name="DataGrid_Deals" Background="#FFE5E5E5" AutoGenerateColumns="False" >
                     <DataGrid.DataContext>
                         <DataAccessService:ViewDeal/>
                     </DataGrid.DataContext>
@@ -63,6 +63,9 @@
                 </DataGrid>
             </TabItem>
         </TabControl>
+        <Button Content="Add" HorizontalAlignment="Left" Margin="402,11,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Add"/>
+        <Button Content="Correct" HorizontalAlignment="Left" Margin="402,38,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Delete" HorizontalAlignment="Left" Margin="402,65,0,0" VerticalAlignment="Top" Width="75"/>
 
     </Grid>
 </Window>
