--- a/Soloveyko_AV/Client/OtherWindows/DealWindow.xaml
+++ b/Soloveyko_AV/Client/OtherWindows/DealWindow.xaml
@@ -3,6 +3,31 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="DealWindow" Height="300" Width="300">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="53*"/>
+            <RowDefinition Height="37*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="21*"/>
+            <ColumnDefinition Width="132*"/>
+            <ColumnDefinition Width="139*"/>
+        </Grid.ColumnDefinitions>
+        <ComboBox Name="ComboBox_Seller" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
+        <Label Content="Seller" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="39"/>
+        <ComboBox Name="ComboBox_Buyer" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
+        <Label Content="Buyer" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="40"/>
+        <Label Content="PersonalNumber" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="106" Grid.RowSpan="2"/>
+        <TextBox Name="TextBox_PersonalNumberOfDeal" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,137,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.RowSpan="2"/>
+        <ComboBox Name="ComboBox_ObjOfTransact" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
+        <Label Content="KindOfCalc" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="69"/>
+        <ComboBox Name="ComboBox_KindOfCalc" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
+        <Label Content="ObjectOfTransact" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="108"/>
+        <Label Content="DateOfDeal" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="106" Grid.Row="1"/>
+        <TextBox Name="TextBox_DateOfDeal" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,6,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="1"/>
+        <Label Content="TransactionAmount" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="122" Grid.Row="1"/>
+        <TextBox Name="TextBox_TransactionAmount" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="1"/>
+        <Button Name="Button_Add" Content="Add" Grid.Column="2" HorizontalAlignment="Left" Margin="54,76,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="Button_Add_Click"/>
+        <Button Name="Button_Correct" Content="Correct" Grid.Column="1" HorizontalAlignment="Left" Margin="106,76,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2" Click="Button_Correct_Click"/>
+
     </Grid>
 </Window>
