--- a/Soloveyko_AV/Client/OtherWindows/DealWindow.xaml
+++ b/Soloveyko_AV/Client/OtherWindows/DealWindow.xaml
@@ -12,7 +12,7 @@
             <ColumnDefinition Width="132*"/>
             <ColumnDefinition Width="139*"/>
         </Grid.ColumnDefinitions>
-        <ComboBox Name="ComboBox_Seller" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
+        <ComboBox Name="ComboBox_Seller" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22" LostFocus="ComboBox_Seller_LostFocus"/>
         <Label Content="Seller" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="39"/>
         <ComboBox Name="ComboBox_Buyer" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
         <Label Content="Buyer" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="40"/>
