--- a/Soloveyko_AV/Client/MainWindow.xaml
+++ b/Soloveyko_AV/Client/MainWindow.xaml
@@ -1,14 +1,25 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:DataAccessService="clr-namespace:Client.DataAccessService" x:Class="Client.MainWindow"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:DataAccessService="clr-namespace:Client.DataAccessService"
+        xmlns:viewModels="clr-namespace:Entities.ViewModels;assembly=Entities"
+        x:Class="Client.MainWindow"
+        Title="MainWindow" Height="350" Width="525" Foreground="White" OpacityMask="Black" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+            <GradientStop Color="#FF060100" Offset="1"/>
+            <GradientStop Color="#FFFD7DDA"/>
+            <GradientStop Color="#FF99190C" Offset="0.924"/>
+            <GradientStop Color="#FF7474FF" Offset="0.681"/>
+            <GradientStop Color="#FFB9FF00" Offset="0.402"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
-        <TabControl Name="TabControl_DataView" HorizontalAlignment="Left" Height="300" Margin="10,10,0,0" VerticalAlignment="Top" Width="387">
+        <TabControl Name="TabControl_DataView" HorizontalAlignment="Left" Height="287" Margin="10,10,0,0" VerticalAlignment="Top" Width="387">
             <TabItem Name="TabItem_Users" Header="Users">
                 <DataGrid Name="DataGrid_Users" Background="#FFE5E5E5" AutoGenerateColumns="False">
                     <DataGrid.DataContext>
-                        <DataAccessService:ViewUser/>
+                        <viewModels:ViewUser/>
                     </DataGrid.DataContext>
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="UserID" Binding="{Binding UserID}"/>
@@ -22,18 +33,18 @@
             <TabItem Name="TabItem_ObjOfTransact" Header="ObjOfTransact">
                 <DataGrid Name="DataGrid_ObjOfTransact" Background="#FFE5E5E5" AutoGenerateColumns="False" >
                     <DataGrid.DataContext>
-                        <DataAccessService:ViewObjOfTransact/>
+                        <viewModels:ViewObjOfTransact/>
                     </DataGrid.DataContext>
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ObjID" Binding="{Binding ObjectOfTransactionID}"/>
                         <DataGridTextColumn Header="UserID" Binding="{Binding UserID}"/>
                         <DataGridTextColumn Header="UserInfo" Binding="{Binding UserInfo}"/>
-                        
+
                         <DataGridTextColumn Header="ObjectType" Binding="{Binding ObjectType}"/>
                         <DataGridTextColumn Header="ServiceType" Binding="{Binding ServiceType}"/>
                         <DataGridTextColumn Header="KindOfCalculating" Binding="{Binding KindOfCalculating}"/>
                         <DataGridTextColumn Header="ObjectState" Binding="{Binding ObjectState}"/>
-                        
+
                         <DataGridTextColumn Header="Cost" Binding="{Binding Cost}"/>
                         <DataGridTextColumn Header="Description" Binding="{Binding Description}"/>
                     </DataGrid.Columns>
@@ -42,7 +53,7 @@
             <TabItem Name="TabItem_Deals" Header="Deals">
                 <DataGrid Name="DataGrid_Deals" Background="#FFE5E5E5" AutoGenerateColumns="False" >
                     <DataGrid.DataContext>
-                        <DataAccessService:ViewDeal/>
+                        <viewModels:ViewDeal/>
                     </DataGrid.DataContext>
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="DealID" Binding="{Binding DealID}"/>
@@ -62,9 +73,9 @@
                 </DataGrid>
             </TabItem>
         </TabControl>
-        <Button Content="Add" HorizontalAlignment="Left" Margin="402,11,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Add"/>
-        <Button Content="Correct" HorizontalAlignment="Left" Margin="402,38,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Delete" HorizontalAlignment="Left" Margin="402,65,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Add" HorizontalAlignment="Left" Margin="402,11,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Add" Background="#FF39BF1B"/>
+        <Button Content="Correct" HorizontalAlignment="Left" Margin="402,38,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Correct" Background="#FFEC9F18"/>
+        <Button Content="Delete" HorizontalAlignment="Left" Margin="402,65,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Delete" Background="#FFD81818"/>
 
     </Grid>
 </Window>
