--- a/Soloveyko_AV/Client/OtherWindows/DealWindow.xaml
+++ b/Soloveyko_AV/Client/OtherWindows/DealWindow.xaml
@@ -1,11 +1,19 @@
 ﻿<Window x:Class="Client.OtherWindows.DealWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DealWindow" Height="300" Width="300">
+        Title="DealWindow" Height="300" Width="300" Foreground="White" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+            <GradientStop Color="#FF060100" Offset="1"/>
+            <GradientStop Color="#FFFD7DDA"/>
+            <GradientStop Color="#FF99190C" Offset="0.924"/>
+            <GradientStop Color="#FF7474FF" Offset="0.681"/>
+            <GradientStop Color="#FFB9FF00" Offset="0.402"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="53*"/>
-            <RowDefinition Height="37*"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="21*"/>
@@ -13,21 +21,21 @@
             <ColumnDefinition Width="139*"/>
         </Grid.ColumnDefinitions>
         <ComboBox Name="ComboBox_Seller" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22" LostFocus="ComboBox_Seller_LostFocus"/>
-        <Label Content="Seller" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="39"/>
+        <Label Content="Seller" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="39" FontSize="18" FontFamily="Freestyle Script"/>
         <ComboBox Name="ComboBox_Buyer" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
-        <Label Content="Buyer" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="40"/>
-        <Label Content="PersonalNumber" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="106" Grid.RowSpan="2"/>
-        <TextBox Name="TextBox_PersonalNumberOfDeal" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,137,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.RowSpan="2"/>
+        <Label Content="Buyer" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="40" FontSize="18" FontFamily="Freestyle Script"/>
+        <Label Content="PersonalNumber" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="106" FontSize="18" FontFamily="Freestyle Script"/>
+        <TextBox Name="TextBox_PersonalNumberOfDeal" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,134,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
         <ComboBox Name="ComboBox_ObjOfTransact" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
-        <Label Content="KindOfCalc" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="69"/>
+        <Label Content="KindOfCalc" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="69" FontSize="18" FontFamily="Freestyle Script"/>
         <ComboBox Name="ComboBox_KindOfCalc" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
-        <Label Content="ObjectOfTransact" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="108"/>
-        <Label Content="DateOfDeal" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="106" Grid.Row="1"/>
-        <TextBox Name="TextBox_DateOfDeal" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,6,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="1"/>
-        <Label Content="TransactionAmount" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="122" Grid.Row="1"/>
-        <TextBox Name="TextBox_TransactionAmount" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="1"/>
-        <Button Name="Button_Add" Content="Add" Grid.Column="2" HorizontalAlignment="Left" Margin="54,76,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="Button_Add_Click"/>
-        <Button Name="Button_Correct" Content="Correct" Grid.Column="1" HorizontalAlignment="Left" Margin="106,76,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2" Click="Button_Correct_Click"/>
+        <Label Content="ObjectOfTransact" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="108" FontSize="18" FontFamily="Freestyle Script"/>
+        <Label Content="DateOfDeal" HorizontalAlignment="Left" Margin="10,162,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="106" FontSize="18" FontFamily="Freestyle Script"/>
+        <TextBox Name="TextBox_DateOfDeal" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,162,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label Content="TransactionAmount" HorizontalAlignment="Left" Margin="10,190,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="122" FontSize="18" FontFamily="Freestyle Script"/>
+        <TextBox Name="TextBox_TransactionAmount" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,190,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Button Name="Button_Add" Content="Add" Grid.Column="2" HorizontalAlignment="Left" Margin="54,235,0,0" VerticalAlignment="Top" Width="75" Click="Button_Add_Click" Background="#FF39BF1B"/>
+        <Button Name="Button_Correct" Content="Correct" Grid.Column="1" HorizontalAlignment="Left" Margin="106,235,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2" Click="Button_Correct_Click" Background="#FFEC9F18"/>
 
     </Grid>
 </Window>
