--- a/Soloveyko_AV/Client/OtherWindows/UserWindow.xaml
+++ b/Soloveyko_AV/Client/OtherWindows/UserWindow.xaml
@@ -1,7 +1,16 @@
 ﻿<Window x:Class="Client.OtherWindows.UserWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="UserWindow" Height="251" Width="322">
+        Title="UserWindow" Height="251" Width="322" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+            <GradientStop Color="#FF060100" Offset="1"/>
+            <GradientStop Color="#FFFD7DDA"/>
+            <GradientStop Color="#FF99190C" Offset="0.924"/>
+            <GradientStop Color="#FF7474FF" Offset="0.681"/>
+            <GradientStop Color="#FFB9FF00" Offset="0.402"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid HorizontalAlignment="Left" Width="300">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="7*"/>
@@ -10,14 +19,14 @@
         </Grid.ColumnDefinitions>
 
         <TextBox Name="TextBox_Name" HorizontalAlignment="Left" Height="23" Margin="10,36,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="2"/>
-        <Label Content="Name" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="42"/>
+        <Label Content="Name" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="42" FontSize="18" FontFamily="Freestyle Script"/>
         <TextBox Name="TextBox_Surname" HorizontalAlignment="Left" Height="23" Margin="10,67,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="2"/>
-        <Label Content="Surname" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="57"/>
+        <Label Content="Surname" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="57" FontSize="18" FontFamily="Freestyle Script"/>
         <TextBox Name="TextBox_PhoneNumber" HorizontalAlignment="Left" Height="23" Margin="10,98,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="2"/>
-        <Label Content="PhoneNumber" HorizontalAlignment="Left" Margin="10,95,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="96"/>
+        <Label Content="PhoneNumber" HorizontalAlignment="Left" Margin="10,95,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="96" FontSize="18" FontFamily="Freestyle Script"/>
         <TextBox Name="TextBox_Email" HorizontalAlignment="Left" Height="23" Margin="10,129,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="2"/>
-        <Label Content="Email" HorizontalAlignment="Left" Margin="10,126,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="38"/>
-        <Button Name="Button_Correct"  Content="Correct" Grid.Column="1" HorizontalAlignment="Left" Margin="107,174,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2" Click="Button_Correct_Click"/>
-        <Button Name="Button_Add" Content="Add" HorizontalAlignment="Right" Margin="0,174,24,0" VerticalAlignment="Top" Width="75" Grid.Column="2" Height="22" Click="Button_Add_Click"/>
+        <Label Content="Email" HorizontalAlignment="Left" Margin="10,126,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="38" FontSize="18" FontFamily="Freestyle Script"/>
+        <Button Name="Button_Correct"  Content="Correct" Grid.Column="1" HorizontalAlignment="Left" Margin="107,174,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2" Click="Button_Correct_Click" Background="#FFEC9F18" />
+        <Button Name="Button_Add" Content="Add" HorizontalAlignment="Right" Margin="0,174,24,0" VerticalAlignment="Top" Width="75" Grid.Column="2" Height="22" Click="Button_Add_Click" Background="#FF39BF1B" />
     </Grid>
 </Window>
