--- a/Soloveyko_AV/Client/MainWindow.xaml
+++ b/Soloveyko_AV/Client/MainWindow.xaml
@@ -16,7 +16,7 @@
     </Window.Background>
     <Grid>
         <TabControl Name="TabControl_DataView" HorizontalAlignment="Left" Height="287" Margin="10,10,0,0" VerticalAlignment="Top" Width="387">
-            <TabItem Name="TabItem_Users" Header="Users">
+            <TabItem Name="TabItem_Users" Header="Users" Margin="0,0,-4,-3">
                 <DataGrid Name="DataGrid_Users" Background="#FFE5E5E5" AutoGenerateColumns="False">
                     <DataGrid.DataContext>
                         <viewModels:ViewUser/>
@@ -30,7 +30,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </TabItem>
-            <TabItem Name="TabItem_ObjOfTransact" Header="ObjOfTransact">
+            <TabItem Name="TabItem_ObjOfTransact" Header="ObjOfTransact" Margin="7,0,-11,-3">
                 <DataGrid Name="DataGrid_ObjOfTransact" Background="#FFE5E5E5" AutoGenerateColumns="False" >
                     <DataGrid.DataContext>
                         <viewModels:ViewObjOfTransact/>
@@ -50,7 +50,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </TabItem>
-            <TabItem Name="TabItem_Deals" Header="Deals">
+            <TabItem Name="TabItem_Deals" Header="Deals" Margin="14,0,-18,-3">
                 <DataGrid Name="DataGrid_Deals" Background="#FFE5E5E5" AutoGenerateColumns="False" >
                     <DataGrid.DataContext>
                         <viewModels:ViewDeal/>
@@ -76,6 +76,9 @@
         <Button Content="Add" HorizontalAlignment="Left" Margin="402,11,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Add" Background="#FF39BF1B"/>
         <Button Content="Correct" HorizontalAlignment="Left" Margin="402,38,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Correct" Background="#FFEC9F18"/>
         <Button Content="Delete" HorizontalAlignment="Left" Margin="402,65,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Delete" Background="#FFD81818"/>
+        <TextBox Name="TextBox_SearchValue" HorizontalAlignment="Left" Height="23" Margin="402,197,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="88"/>
+        <CheckBox Name="CheckBox_ActivateSearch" Content="Activate Serach" HorizontalAlignment="Left" Margin="402,176,0,0" VerticalAlignment="Top" Click="CheckBox_ActivateSearch_Click_1"/>
+        <Button Name="Button_Search" Content="Find" HorizontalAlignment="Left" Margin="402,225,0,0" VerticalAlignment="Top" Width="75" Click="Button_Search_Click" Background="#FF45E2EA"/>
 
     </Grid>
 </Window>
