--- a/Soloveyko_AV/Client/MainWindow.xaml
+++ b/Soloveyko_AV/Client/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:DataAccessService="clr-namespace:Client.DataAccessService"
         xmlns:viewModels="clr-namespace:Entities.ViewModels;assembly=Entities"
         x:Class="Client.MainWindow"
-        Title="MainWindow" Height="350" Width="525" Foreground="White" OpacityMask="Black" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="MainWindow" Height="402" Width="649" Foreground="White" OpacityMask="Black" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
             <GradientStop Color="#FF060100" Offset="1"/>
@@ -15,7 +15,7 @@
         </LinearGradientBrush>
     </Window.Background>
     <Grid>
-        <TabControl Name="TabControl_DataView" HorizontalAlignment="Left" Height="287" Margin="10,10,0,0" VerticalAlignment="Top" Width="387">
+        <TabControl Name="TabControl_DataView" HorizontalAlignment="Left" Height="332" Margin="28,10,0,0" VerticalAlignment="Top" Width="495">
             <TabItem Name="TabItem_Users" Header="Users" Margin="0,0,-4,-3">
                 <DataGrid Name="DataGrid_Users" Background="#FFE5E5E5" AutoGenerateColumns="False">
                     <DataGrid.DataContext>
@@ -73,12 +73,13 @@
                 </DataGrid>
             </TabItem>
         </TabControl>
-        <Button Content="Add" HorizontalAlignment="Left" Margin="402,11,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Add" Background="#FF39BF1B"/>
-        <Button Content="Correct" HorizontalAlignment="Left" Margin="402,38,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Correct" Background="#FFEC9F18"/>
-        <Button Content="Delete" HorizontalAlignment="Left" Margin="402,65,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Delete" Background="#FFD81818"/>
-        <TextBox Name="TextBox_SearchValue" HorizontalAlignment="Left" Height="23" Margin="402,197,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="88"/>
-        <CheckBox Name="CheckBox_ActivateSearch" Content="Activate Serach" HorizontalAlignment="Left" Margin="402,176,0,0" VerticalAlignment="Top" Click="CheckBox_ActivateSearch_Click_1"/>
-        <Button Name="Button_Search" Content="Find" HorizontalAlignment="Left" Margin="402,225,0,0" VerticalAlignment="Top" Width="75" Click="Button_Search_Click" Background="#FF45E2EA"/>
+        <Button Content="Add" HorizontalAlignment="Left" Margin="537,32,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Add" Background="#FF39BF1B"/>
+        <Button Content="Correct" HorizontalAlignment="Left" Margin="537,59,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Correct" Background="#FFEC9F18"/>
+        <Button Content="Delete" HorizontalAlignment="Left" Margin="537,86,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Delete" Background="#FFD81818"/>
+        <TextBox Name="TextBox_SearchValue" HorizontalAlignment="Left" Height="23" Margin="537,218,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="88"/>
+        <CheckBox Name="CheckBox_ActivateSearch" Content="Activate Serach" HorizontalAlignment="Left" Margin="528,197,0,0" VerticalAlignment="Top" Click="CheckBox_ActivateSearch_Click"/>
+        <Button Name="Button_Search" Content="Find" HorizontalAlignment="Left" Margin="537,246,0,0" VerticalAlignment="Top" Width="75" Click="Button_Search_Click" Background="#FF45E2EA"/>
+        <Button x:Name="Chart" Content="Chart" HorizontalAlignment="Left" Margin="537,133,0,0" VerticalAlignment="Top" Width="75" Background="#FF6188F0" Click="Button_Chart_Click"/>
 
     </Grid>
 </Window>
