--- a/Soloveyko_AV/Client/OtherWindows/DealWindow.xaml
+++ b/Soloveyko_AV/Client/OtherWindows/DealWindow.xaml
@@ -26,7 +26,7 @@
         <Label Content="Buyer" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="40" FontSize="18" FontFamily="Freestyle Script"/>
         <Label Content="PersonalNumber" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="106" FontSize="18" FontFamily="Freestyle Script"/>
         <TextBox Name="TextBox_PersonalNumberOfDeal" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="10,134,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
-        <ComboBox Name="ComboBox_ObjOfTransact" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
+        <ComboBox Name="ComboBox_ObjOfTransact" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22" LostFocus="ComboBox_ObjOfTransact_LostFocus"/>
         <Label Content="KindOfCalc" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="69" FontSize="18" FontFamily="Freestyle Script"/>
         <ComboBox Name="ComboBox_KindOfCalc" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="120" Grid.Column="2" Height="22"/>
         <Label Content="ObjectOfTransact" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="108" FontSize="18" FontFamily="Freestyle Script"/>
